<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.edu.itplus_academy.thitracnghiem.Fragment.TrangChuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/bg_trangchu">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_itplus"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trangchu_title"
                android:gravity="center"
                android:textColor="@color/colorBlue"
                android:textSize="14dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trangchu_title2"
                android:gravity="center"
                android:textSize="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:orientation="vertical"
            android:padding="16dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@drawable/bg_orange">
                <TextView
                    android:id="@+id/txt_kiemtra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/kiemtra"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/colorBlue"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/txt_kiemtra">
                    <Button
                        android:id="@+id/btn_dangky"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_btn_blue"
                        android:text="@string/dangky"
                        android:textColor="@color/colorWhite"
                        android:textAllCaps="false"
                        android:layout_marginRight="20dp"/>
                    <Button
                        android:id="@+id/btn_thangiathi"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_btn_blue"
                        android:text="@string/thamgiathi"
                        android:textColor="@color/colorWhite"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/gioithieu_title"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/colorWhite"/>
            <android.support.v4.view.ViewPager
                android:id="@+id/vp_images"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gioithieu"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="8dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/chuongtrinhhoc"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorBlue"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/bg_blue"
                android:text="@string/laptrinhungdung"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:gravity="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/wl6"/>
            <vn.edu.itplus_academy.thitracnghiem.widgets.AnimatedExpandableListView
                android:id="@+id/lv_laptrinhungdung"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/bg_blue"
                android:text="@string/thietkedohoa"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:gravity="center"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/wl7"/>
            <vn.edu.itplus_academy.thitracnghiem.widgets.AnimatedExpandableListView
                android:id="@+id/lv_thietkedohoa"
                android:layout_width="match_parent"
                android:layout_height="200dp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/doituongthamgia_title"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorBlue"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/doituongthamgia"
            android:textAlignment="center"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hinhthuctuyensinh_title"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/colorBlue"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hinhthuctuyensinh"
            android:textAlignment="center"
            android:gravity="center" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:background="@drawable/bg_layout"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/bg_blue"
                android:text="@string/hinhthucthi"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thitructiep_title"
                android:textColor="@color/colorBlack"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thitructiep"
                android:textSize="8dp"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thitructuyen_title"
                android:textColor="@color/colorBlack"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thitructuyen"
                android:textSize="8dp"
                android:paddingLeft="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:background="@drawable/bg_layout"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/bg_blue"
                android:text="@string/cautrucdethi_title"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phan1_title"
                android:textColor="@color/colorBlack"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phan1"
                android:textSize="8dp"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phan2_title"
                android:textColor="@color/colorBlack"
                android:paddingLeft="16dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phan2"
                android:textSize="8dp"
                android:paddingLeft="16dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue"
            android:orientation="vertical"
            android:paddingBottom="20dp">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_itplus_footer"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="12dp"
                android:text="@string/trangchu_title" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="8dp"
                android:text="@string/diachi" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="8dp"
                android:text="@string/sodienthoai" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="8dp"
                android:text="@string/email" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:textSize="8dp"
                android:text="@string/phattrien" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
